Fix tech list not turning white in dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,12 @@ body {
 	nav button img {
 		filter: invert(1);
 	}
+
+	.about-me {
+		li {
+			color: white;
+		}
+	}
 }
 
 .App {
